Added back p tags with id

--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
         </iframe>
     </div>
     <div class="time-weekday-date">
-        <iframe src="time.php" width="200" height="50"></iframe>
+        <p id="time"></p>
+        <p id="weekday"></p>
+        <p id="date"></p>
     </div>
 </div>
 </body>
