testing out red text

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
         iframe {
             border: none;
         }
+
+        p {
+            color: red;
+        }
     </style>
     <script>
         function updateTime() {
