--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             max-width: 60rem;
 
             min-height: 25rem;
-            max-height: 30rem;
+            max-height: 40rem;
         }
 
         .yr-widget {
@@ -55,7 +55,7 @@
         .time-weekday-date {
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
+            align-items: center;
             width: max-content;
             height: max-content;
         }
@@ -72,7 +72,6 @@
 
         #date {
             max-width: 20rem;
-            min-width: 18rem;
             font-size: 3rem;
         }
 
