--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             const dateTime = new Date().toLocaleDateString('nb-NO', {
                 year: 'numeric',
                 month: '2-digit',
-                day: 'numeric'
+                day: '2-digit'
             });
             console.debug(dateTime);
             document.getElementById('date').textContent = dateTime;
