--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <meta content="none" name="robots"/>
     <title>Display screen</title>
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
         body {
             background-color: black;
-            padding: 1rem;
-            overflow: hidden;
+            margin: 1rem;
         }
 
         .corners {
@@ -19,6 +24,7 @@
         }
 
         .container {
+            height: calc(100% - 2rem);
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -29,6 +35,7 @@
         .yr-and-calender {
             max-width: 40rem;
             width: 100%;
+            height: 100%;
             display: flex;
             flex-direction: column;
             row-gap: 2rem;
@@ -61,6 +68,7 @@
             align-items: center;
             justify-content: space-between;
             width: max-content;
+            height: 100%;
         }
 
         #time {
